--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Modern Blog
-description: Modern-Blog A Elegant template for Jekyll
+title: Gibberich
+description: Modern-Blog Outlet of a dreamer
 keywords: Modern, Blogging, Fun
-author: Wferr
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+author: Akshay Elangovan
+baseurl: "giberich.com" # the subpath of your site, e.g. /blog/
+url: "gibberich.com" # the base hostname & protocol for your site
